--- a/index.html
+++ b/index.html
@@ -8,76 +8,56 @@
 </head>
 <body>
     <header>
-        <h1>Welcome to Logan Wallpaper Gallery</h1>
-        <nav>
-            <ul>
-                <li><a href="#nature">Nature</a></li>
-                <li><a href="#sci-fi">Sci-Fi</a></li>
-                <li><a href="#movies">Movies</a></li>
-                <li><a href="#anime">Anime</a></li>
-                <li><a href="#sports">Sports</a></li>
-                <li><a href="#trading">Trading</a></li>
-                <li><a href="#retro">Retro</a></li>
-                <li><a href="#architectural">Architectural</a></li>
-            </ul>
-        </nav>
+        <h1>LOGAN_KE WALLPAPERS</h1>
     </header>
 
     <main>
-        <div class="category-container">
-            <section id="nature" class="category-box">
+        <div class="categories">
+            <section id="nature" class="category">
                 <h2>Nature</h2>
-                <p>Explore breathtaking wallpapers of nature.</p>
                 <a href="nature.html">View Nature Wallpapers</a>
             </section>
 
-            <section id="sci-fi" class="category-box">
+            <section id="sci-fi" class="category">
                 <h2>Sci-Fi</h2>
-                <p>A collection of futuristic and imaginative wallpapers.</p>
                 <a href="sci-fi.html">View Sci-Fi Wallpapers</a>
             </section>
 
-            <section id="movies" class="category-box">
+            <section id="movies" class="category">
                 <h2>Movies</h2>
-                <p>Check out wallpapers from your favorite movies.</p>
                 <a href="movies.html">View Movie Wallpapers</a>
             </section>
 
-            <section id="anime" class="category-box">
+            <section id="anime" class="category">
                 <h2>Anime</h2>
-                <p>Dive into the world of anime with stunning wallpapers.</p>
                 <a href="anime.html">View Anime Wallpapers</a>
             </section>
 
-            <section id="sports" class="category-box">
+            <section id="sports" class="category">
                 <h2>Sports</h2>
-                <p>Discover wallpapers of your favorite sports teams.</p>
                 <a href="sports.html">View Sports Wallpapers</a>
             </section>
 
-            <section id="trading" class="category-box">
+            <section id="trading" class="category">
                 <h2>Trading</h2>
-                <p>Explore dynamic wallpapers related to trading.</p>
                 <a href="trading.html">View Trading Wallpapers</a>
             </section>
 
-            <section id="retro" class="category-box">
+            <section id="retro" class="category">
                 <h2>Retro</h2>
-                <p>Enjoy nostalgic retro wallpapers.</p>
                 <a href="retro.html">View Retro Wallpapers</a>
             </section>
 
-            <section id="architectural" class="category-box">
+            <section id="architectural" class="category">
                 <h2>Architectural</h2>
-                <p>Admire stunning architectural wallpapers.</p>
                 <a href="architectural.html">View Architectural Wallpapers</a>
             </section>
-        </div>
+        </div> <!-- End of categories -->
     </main>
 
     <footer>
-        <div class="profile-container">
-            <img src="kibry.jpg" alt="Kibry's Profile" class="profile-photo">
+        <div class="profile">
+            <img src="kibry.jpg" alt="Profile Photo" class="profile-photo">
             <div class="social-media">
                 <a href="https://wa.me/254789504437" target="_blank">WhatsApp</a>
             </div>
