--- a/index.html
+++ b/index.html
@@ -9,58 +9,76 @@
 <body>
     <header>
         <h1>LOGAN_KE WALLPAPERS</h1>
+        <nav>
+            <ul>
+                <li><a href="#nature">Nature</a></li>
+                <li><a href="#sci-fi">Sci-Fi</a></li>
+                <li><a href="#movies">Movies</a></li>
+                <li><a href="#anime">Anime</a></li>
+                <li><a href="#sports">Sports</a></li>
+                <li><a href="#trading">Trading</a></li>
+                <li><a href="#retro">Retro</a></li>
+                <li><a href="#architectural">Architectural</a></li>
+            </ul>
+        </nav>
     </header>
 
     <main>
         <div class="categories">
-            <section id="nature" class="category">
-                <h2>Nature</h2>
+            <section id="nature">
+                <div class="category-box">Nature</div>
+                <p>Explore breathtaking wallpapers of nature.</p>
                 <a href="nature.html">View Nature Wallpapers</a>
             </section>
 
-            <section id="sci-fi" class="category">
-                <h2>Sci-Fi</h2>
+            <section id="sci-fi">
+                <div class="category-box">Sci-Fi</div>
+                <p>A collection of futuristic and imaginative wallpapers.</p>
                 <a href="sci-fi.html">View Sci-Fi Wallpapers</a>
             </section>
 
-            <section id="movies" class="category">
-                <h2>Movies</h2>
+            <section id="movies">
+                <div class="category-box">Movies</div>
+                <p>Check out wallpapers from your favorite movies.</p>
                 <a href="movies.html">View Movie Wallpapers</a>
             </section>
 
-            <section id="anime" class="category">
-                <h2>Anime</h2>
+            <section id="anime">
+                <div class="category-box">Anime</div>
+                <p>Dive into the world of anime with stunning wallpapers.</p>
                 <a href="anime.html">View Anime Wallpapers</a>
             </section>
 
-            <section id="sports" class="category">
-                <h2>Sports</h2>
+            <section id="sports">
+                <div class="category-box">Sports</div>
+                <p>Discover wallpapers of your favorite sports teams.</p>
                 <a href="sports.html">View Sports Wallpapers</a>
             </section>
 
-            <section id="trading" class="category">
-                <h2>Trading</h2>
+            <section id="trading">
+                <div class="category-box">Trading</div>
+                <p>Explore dynamic wallpapers related to trading.</p>
                 <a href="trading.html">View Trading Wallpapers</a>
             </section>
 
-            <section id="retro" class="category">
-                <h2>Retro</h2>
+            <section id="retro">
+                <div class="category-box">Retro</div>
+                <p>Enjoy nostalgic retro wallpapers.</p>
                 <a href="retro.html">View Retro Wallpapers</a>
             </section>
 
-            <section id="architectural" class="category">
-                <h2>Architectural</h2>
+            <section id="architectural">
+                <div class="category-box">Architectural</div>
+                <p>Admire stunning architectural wallpapers.</p>
                 <a href="architectural.html">View Architectural Wallpapers</a>
             </section>
-        </div> <!-- End of categories -->
+        </div>
     </main>
 
     <footer>
         <div class="profile">
             <img src="kibry.jpg" alt="Profile Photo" class="profile-photo">
-            <div class="social-media">
-                <a href="https://wa.me/254789504437" target="_blank">WhatsApp</a>
-            </div>
+            <a href="https://wa.me/254789504437" target="_blank">WhatsApp</a>
         </div>
         <p>&copy; 2023 Logan Wallpaper Gallery</p>
     </footer>
