--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <header>
-    <h1>LOGAN_KE WALLPAPERS</h1>
+    <h1>Wallpaper Gallery By Logan</h1>
 </header>
 <body>
     <main>
